--- a/index.html
+++ b/index.html
@@ -10,19 +10,28 @@
 </head>
 <body>
     <div class="greetings">
-    <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
+   
         <span>H</span>
         <span>A</span>
-        <span>L</span>
-        <span>L</span>
-        <span>O</span>
+        <span>P</span>
+        <span>P</span>
+        <span>Y</span>
+        <span>B</span>
+        <span>I</span>
+        <span>R</span>
+        <span>T</span>
+        <span>H</span>
+        <span>D</span>
+        <span>A</span>
+        <span>Y</span>
+        
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
+        <span>Thers some beautifull flower 🤗 for a beautfull girl like you❤️❤️</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik disini</a>
+            <a href="flower.html">Tap here to reavel</a>
         </button>
         
     </div>
